src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Chatter_Challenge_Member__c</fullName>
        <description>Chatter Challenge acknowledgment</description>
        <inlineHelpText>Users with &quot;Yes&quot; will be eligible to have their profile completion percentage calculated and be counted in the chatter challenge.</inlineHelpText>
        <label>Chatter Challenge Member</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
                <color>#990000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Profile_Check__c</fullName>
        <label>Profile Check</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Status__c</fullName>
        <formula>(IF(ISBLANK(Profile_Check__c),0,1)
+IF(ISBLANK(Title),0,1)+IF(ISBLANK(Phone
),0,1)+IF(ISBLANK(Manager.LastName ),0,1)) /4*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>